Issue #3090684 by Mixologic, greg.1.anderson, opdavies, alexpott: Rename drupal/dev-dependencies and drupal/pinned-dev-dependencies

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "drupal/dev-dependencies",
+    "name": "drupal/core-dev",
     "type": "metapackage",
     "description": "require-dev dependencies from drupal/drupal; use in addition to drupal/core-recommended to run tests from drupal/core.",
     "license": "GPL-2.0-or-later",
