--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "behat/mink-selenium2-driver": "1.4.0 | 1.3.1.1 | 1.3.x-dev",
         "composer/composer": "^1.9.1",
         "drupal/coder": "^8.3.2",
+        "easyrdf/easyrdf": "^0.9",
         "justinrainbow/json-schema": "^5.2",
         "mikey179/vfsstream": "^1.6.8",
         "phpspec/prophecy": "^1.7",
