--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,7 @@
         "symfony/css-selector": "^4.4",
         "symfony/dom-crawler": "^4.4 !=4.4.5",
         "symfony/error-handler": "^4.4",
-        "symfony/filesystem": "^4.4",
+        "symfony/filesystem": "^4.4 || ^5.4",
         "symfony/finder": "^4.4",
         "symfony/lock": "^4.4",
         "symfony/phpunit-bridge": "^5.4",
