--- a/composer.json
+++ b/composer.json
@@ -15,16 +15,16 @@
         "justinrainbow/json-schema": "^5.2",
         "lullabot/mink-selenium2-driver": "^1.7.3",
         "lullabot/php-webdriver": "^2.0.5",
-        "mglaman/phpstan-drupal": "^1.2.11",
+        "mglaman/phpstan-drupal": "^1.2.11 || ^2.0",
         "micheh/phpcs-gitlab": "^1.1",
         "mikey179/vfsstream": "^1.6.11",
         "open-telemetry/exporter-otlp": "^1",
         "open-telemetry/sdk": "^1",
         "php-http/guzzle7-adapter": "^1.0",
         "phpspec/prophecy-phpunit": "^2",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan": "^1.12.4",
-        "phpstan/phpstan-phpunit": "^1.3.16",
+        "phpstan/extension-installer": "^1.4.3",
+        "phpstan/phpstan": "^1.12.4 || ^2.0.4",
+        "phpstan/phpstan-phpunit": "^1.3.16 || ^2.0.1",
         "phpunit/phpunit": "^10.5.19",
         "symfony/browser-kit": "^7.2",
         "symfony/css-selector": "^7.2",
