--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "phpstan/extension-installer": "^1.4.3",
         "phpstan/phpstan": "^1.12.4 || ^2.1.11",
         "phpstan/phpstan-phpunit": "^1.3.16 || ^2.0.6",
-        "phpunit/phpunit": "^10.5.19",
+        "phpunit/phpunit": "^10.5.19 || ^11.5.3",
         "symfony/browser-kit": "^7.2",
         "symfony/css-selector": "^7.2",
         "symfony/dom-crawler": "^7.2",
