--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "lullabot/mink-selenium2-driver": "^1.7.3",
         "lullabot/php-webdriver": "^2.0.5",
         "mglaman/phpstan-drupal": "^1.2.11 || ^2.0.4",
-        "micheh/phpcs-gitlab": "^1.1",
+        "micheh/phpcs-gitlab": "^1.1 || ^2.0",
         "mikey179/vfsstream": "^1.6.11",
         "open-telemetry/exporter-otlp": "^1",
         "open-telemetry/sdk": "^1",
