--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,11 @@
         "phpstan/phpstan": "^1.12.4 || ^2.1.14",
         "phpstan/phpstan-phpunit": "^1.3.16 || ^2.0.6",
         "phpunit/phpunit": "^10.5.19 || ^11.5.3",
-        "symfony/browser-kit": "^7.3@beta",
-        "symfony/css-selector": "^7.3@beta",
-        "symfony/dom-crawler": "^7.3@beta",
-        "symfony/error-handler": "^7.3@beta",
-        "symfony/lock": "^7.3@beta",
-        "symfony/var-dumper": "^7.3@beta"
+        "symfony/browser-kit": "^7.3",
+        "symfony/css-selector": "^7.3",
+        "symfony/dom-crawler": "^7.3",
+        "symfony/error-handler": "^7.3",
+        "symfony/lock": "^7.3",
+        "symfony/var-dumper": "^7.3"
     }
 }
