--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "justinrainbow/json-schema": "^5.2 || ^6.3",
         "lullabot/mink-selenium2-driver": "^1.7.3",
         "lullabot/php-webdriver": "^2.0.5",
-        "mglaman/phpstan-drupal": "^2.0.7",
+        "mglaman/phpstan-drupal": "^1.3.9 || ^2.0.7",
         "micheh/phpcs-gitlab": "^1.1 || ^2.0",
         "mikey179/vfsstream": "^1.6.11",
         "open-telemetry/exporter-otlp": "^1",
@@ -23,8 +23,8 @@
         "php-http/guzzle7-adapter": "^1.0",
         "phpspec/prophecy-phpunit": "^2",
         "phpstan/extension-installer": "^1.4.3",
-        "phpstan/phpstan": "^2.1.17",
-        "phpstan/phpstan-phpunit": "^2.0.6",
+        "phpstan/phpstan": "^1.12.27 || ^2.1.17",
+        "phpstan/phpstan-phpunit": "^1.4.2 || ^2.0.6",
         "phpunit/phpunit": "^10.5.19 || ^11.5.3",
         "symfony/browser-kit": "^7.3",
         "symfony/css-selector": "^7.3",
