--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "phpstan/extension-installer": "^1.4.3",
         "phpstan/phpstan": "^1.12.27 || ^2.1.26",
         "phpstan/phpstan-phpunit": "^1.4.2 || ^2.0.7",
-        "phpunit/phpunit": "^10.5.19 || ^11.5.42",
+        "phpunit/phpunit": "^11.5.42",
         "symfony/browser-kit": "^7.3",
         "symfony/css-selector": "^7.3",
         "symfony/dom-crawler": "^7.3",
