--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,11 @@
         "phpstan/phpstan": "^1.12.27 || ^2.1.26",
         "phpstan/phpstan-phpunit": "^1.4.2 || ^2.0.7",
         "phpunit/phpunit": "^11.5.42",
-        "symfony/browser-kit": "^7.4@rc",
-        "symfony/css-selector": "^7.4@rc",
-        "symfony/dom-crawler": "^7.4@rc",
-        "symfony/error-handler": "^7.4@rc",
-        "symfony/lock": "^7.4@rc",
-        "symfony/var-dumper": "^7.4@rc"
+        "symfony/browser-kit": "^7.4",
+        "symfony/css-selector": "^7.4",
+        "symfony/dom-crawler": "^7.4",
+        "symfony/error-handler": "^7.4",
+        "symfony/lock": "^7.4",
+        "symfony/var-dumper": "^7.4"
     }
 }
