task: #3565943 [backport 11.2/10.5] [security hardening] Update composer to 2.9.3
By: dww
By: andypost
By: catch
By: quietone
By: longwave

--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
         "behat/mink": "^1.11",
         "behat/mink-browserkit-driver": "^2.2",
         "colinodell/psr-testlogger": "^1.2",
-        "composer/composer": "^2.8.1",
+        "composer/composer": "^2.9",
         "drupal/coder": "^8.3.30",
-        "justinrainbow/json-schema": "^5.2 || ^6.3",
+        "justinrainbow/json-schema": "^6.5",
         "lullabot/mink-selenium2-driver": "^1.7.3",
         "lullabot/php-webdriver": "^2.0.5",
         "mglaman/phpstan-drupal": "^1.3.9 || ^2.0.7",
